--- a/Watch Match WatchKit Extension/Game.plist
+++ b/Watch Match WatchKit Extension/Game.plist
@@ -3,71 +3,39 @@
 <plist version="1.0">
 <dict>
 	<key>time</key>
-	<date>2014-11-24T00:21:30Z</date>
+	<date>2014-11-27T05:35:45Z</date>
 	<key>turns</key>
 	<array>
 		<dict>
 			<key>match</key>
-			<false/>
+			<true/>
 			<key>patterns</key>
 			<array>
-				<integer>1</integer>
-				<integer>4</integer>
 				<integer>2</integer>
-			</array>
-			<key>shapes</key>
-			<array>
-				<integer>4</integer>
-				<integer>1</integer>
-				<integer>6</integer>
-			</array>
-		</dict>
-		<dict>
-			<key>match</key>
-			<false/>
-			<key>patterns</key>
-			<array>
 				<integer>3</integer>
-				<integer>4</integer>
-				<integer>4</integer>
-			</array>
-			<key>shapes</key>
-			<array>
-				<integer>6</integer>
-				<integer>8</integer>
-				<integer>2</integer>
-			</array>
-		</dict>
-		<dict>
-			<key>match</key>
-			<false/>
-			<key>patterns</key>
-			<array>
-				<integer>3</integer>
-				<integer>1</integer>
-				<integer>3</integer>
-			</array>
-			<key>shapes</key>
-			<array>
-				<integer>8</integer>
-				<integer>1</integer>
-				<integer>7</integer>
-			</array>
-		</dict>
-		<dict>
-			<key>match</key>
-			<false/>
-			<key>patterns</key>
-			<array>
-				<integer>4</integer>
-				<integer>1</integer>
 				<integer>0</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>6</integer>
 				<integer>7</integer>
-				<integer>1</integer>
+				<integer>7</integer>
+				<integer>7</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
+				<integer>4</integer>
+				<integer>4</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>7</integer>
+				<integer>7</integer>
+				<integer>7</integer>
 			</array>
 		</dict>
 		<dict>
@@ -75,15 +43,79 @@
 			<false/>
 			<key>patterns</key>
 			<array>
+				<integer>2</integer>
 				<integer>4</integer>
 				<integer>1</integer>
-				<integer>4</integer>
 			</array>
 			<key>shapes</key>
 			<array>
 				<integer>1</integer>
 				<integer>8</integer>
+				<integer>3</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
+				<integer>2</integer>
+				<integer>1</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>8</integer>
+				<integer>3</integer>
+				<integer>2</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>3</integer>
+				<integer>0</integer>
+				<integer>0</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>0</integer>
+				<integer>0</integer>
+				<integer>0</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
+				<integer>4</integer>
+				<integer>2</integer>
+			</array>
+			<key>shapes</key>
+			<array>
 				<integer>5</integer>
+				<integer>8</integer>
+				<integer>7</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>4</integer>
+				<integer>2</integer>
+				<integer>0</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>3</integer>
+				<integer>3</integer>
+				<integer>3</integer>
 			</array>
 		</dict>
 		<dict>
@@ -93,28 +125,28 @@
 			<array>
 				<integer>0</integer>
 				<integer>2</integer>
-				<integer>3</integer>
+				<integer>1</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>0</integer>
-				<integer>0</integer>
-				<integer>0</integer>
+				<integer>6</integer>
+				<integer>6</integer>
+				<integer>6</integer>
 			</array>
 		</dict>
 		<dict>
 			<key>match</key>
-			<false/>
+			<true/>
 			<key>patterns</key>
 			<array>
-				<integer>0</integer>
+				<integer>1</integer>
 				<integer>2</integer>
-				<integer>3</integer>
+				<integer>0</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>1</integer>
-				<integer>0</integer>
+				<integer>4</integer>
+				<integer>4</integer>
 				<integer>4</integer>
 			</array>
 		</dict>
@@ -123,31 +155,47 @@
 			<true/>
 			<key>patterns</key>
 			<array>
-				<integer>0</integer>
+				<integer>3</integer>
 				<integer>0</integer>
 				<integer>2</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>5</integer>
-				<integer>5</integer>
-				<integer>5</integer>
+				<integer>7</integer>
+				<integer>7</integer>
+				<integer>7</integer>
 			</array>
 		</dict>
 		<dict>
 			<key>match</key>
-			<false/>
+			<true/>
 			<key>patterns</key>
 			<array>
-				<integer>0</integer>
-				<integer>3</integer>
+				<integer>4</integer>
+				<integer>1</integer>
 				<integer>2</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>3</integer>
-				<integer>2</integer>
 				<integer>7</integer>
+				<integer>7</integer>
+				<integer>7</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>1</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>8</integer>
+				<integer>8</integer>
+				<integer>8</integer>
 			</array>
 		</dict>
 		<dict>
@@ -156,14 +204,126 @@
 			<key>patterns</key>
 			<array>
 				<integer>4</integer>
+				<integer>2</integer>
 				<integer>3</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>8</integer>
+				<integer>0</integer>
+				<integer>1</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
+				<integer>3</integer>
+				<integer>3</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>4</integer>
+				<integer>7</integer>
+				<integer>0</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>0</integer>
+				<integer>0</integer>
+				<integer>0</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
+				<integer>1</integer>
 				<integer>1</integer>
 			</array>
 			<key>shapes</key>
 			<array>
-				<integer>6</integer>
-				<integer>6</integer>
+				<integer>5</integer>
+				<integer>8</integer>
+				<integer>7</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<true/>
+			<key>patterns</key>
+			<array>
+				<integer>2</integer>
 				<integer>3</integer>
+				<integer>0</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>1</integer>
+				<integer>1</integer>
+				<integer>1</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>4</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>0</integer>
+				<integer>3</integer>
+				<integer>2</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>1</integer>
+				<integer>4</integer>
+				<integer>4</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>3</integer>
+				<integer>3</integer>
+				<integer>0</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>match</key>
+			<false/>
+			<key>patterns</key>
+			<array>
+				<integer>1</integer>
+				<integer>4</integer>
+				<integer>3</integer>
+			</array>
+			<key>shapes</key>
+			<array>
+				<integer>8</integer>
+				<integer>6</integer>
+				<integer>5</integer>
 			</array>
 		</dict>
 	</array>
